--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div> <!-- ./blog-item -->
             <div class="blog-item mg">
                 <div class="blog-item-img">
-                    <img src="images/palm1.jpeg" class="f"alt="this is image" title="stadium" draggable="false"/>
+                    <img src="images/palm1.jpeg" alt="this is image" title="stadium" draggable="false"/>
                 </div> <!-- ./block-item-img -->
                 <div class="blog-info">
                 <ul class="blog-list">
@@ -344,7 +344,7 @@
             </div> <!-- ./blog-item -->
             <div class="blog-item">
                 <div class="blog-item-img">
-                    <img src="images/caravane.jpeg"  class="f" alt="this is image" title="stadium" draggable="false"/>
+                    <img src="images/caravane.jpeg"   alt="this is image" title="stadium" draggable="false"/>
                 </div> <!-- ./block-item-img -->
                 <div class="blog-info">
                 <ul class="blog-list">
@@ -352,7 +352,7 @@
                     <li><i class="fa fa-clock-o"></i>01 Oct</li>
                     <li><i class="fa fa-comments"></i>2023</li>
                 </ul> <!-- ./blog-list -->
-                <h3 class="blog-title">this is imp title here ok ok ok</h3>
+                <h3 class="blog-title">Camels caravanes</h3>
                 <p class="blog-desc">every year in this period a camel caravan bring the salt from tichit mines to other country cities</p>
                 <a href="#" class="blog-link">Read more</a>
             </div> <!-- ./blog-info -->
